--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dev_dependencies:
   hop: '>=0.27.0'
   http: any
   unittest: any
+  build_runner: ^0.9.1+1
+  build_web_compilers: ^0.4.0+4
 transformers:
 - $dart2js:
     minify: true
